Clients: Some refactor